/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package opennms.inventory;
option java_multiple_files = true;
option java_package = "org.opennms.horizon.inventory.dto";

message MonitoringLocationDTO {
  int64 id = 1;
  string tenant_id = 2;
  string location = 3;
}

message MonitoringLocationList {
  repeated MonitoringLocationDTO locations = 1;
}

message IdList {
  repeated google.protobuf.Int64Value ids = 1;
}

service MonitoringLocationService {
  rpc listLocations(google.protobuf.Empty) returns (MonitoringLocationList) {};
  rpc getLocationByName(google.protobuf.StringValue) returns (MonitoringLocationDTO) {};
  rpc getLocationById(google.protobuf.Int64Value) returns (MonitoringLocationDTO) {};
  rpc listLocationsByIds(IdList) returns (MonitoringLocationList) {};
  rpc searchLocations(google.protobuf.StringValue) returns (MonitoringLocationList);
  rpc createLocation(MonitoringLocationDTO) returns (MonitoringLocationDTO) {};
  rpc updateLocation(MonitoringLocationDTO) returns (MonitoringLocationDTO) {};
  rpc deleteLocation(google.protobuf.Int64Value) returns (google.protobuf.BoolValue) {};
}
